--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "framer-motion": "^12.12.1",
+    "frontend": "file:",
+    "libphonenumber-js": "^1.12.8",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "frontend": "file:",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
