--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.4",
     "classnames": "^2.5.1",
     "framer-motion": "^12.12.1",
     "frontend": "file:",
