--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.3.4",
+    "@radix-ui/react-popover": "^1.1.14",
     "classnames": "^2.5.1",
     "framer-motion": "^12.12.1",
     "frontend": "file:",
